--- a/My first Login web/components.json
+++ b/My first Login web/components.json
@@ -6,8 +6,8 @@
   "tailwind": {
     "config": "",
     "css": "src/App.css",
-    "baseColor": "gray",
-    "cssVariables": true,
+    "baseColor": "neutral",
+    "cssVariables": false,
     "prefix": ""
   },
   "iconLibrary": "lucide",
@@ -20,3 +20,4 @@
   },
   "registries": {}
 }
+
