--- a/My first Login web/tsconfig.app.json
+++ b/My first Login web/tsconfig.app.json
@@ -35,5 +35,6 @@
     }
     // ...
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["src/**/*.test.ts", "src/**/*.test.tsx", "src/**/__tests__/**"]
 }
